--- a/index.html
+++ b/index.html
@@ -235,7 +235,24 @@
           <p>С гарантией на все работы</p>
         </div>
 
-     <form action="#" class="form" method="POST">
+        <!-- <div class="calcOrder">
+          <span id="messages"></span>
+          <form class="" action="https://remont-tomsk.ru/form.php" method="post" id="importantForm" name="formOk">
+            <h3>Рассчитать заказ</h3>
+            <input type="text" name="name" value="" placeholder="Имя" id="name">
+            <input type="text" name="tel" value="" placeholder="+7(__)__-__-__" id="tel">
+             <h3>Для отправки данных перетащите ползунок вправо</h3>
+                <div class="range_box">
+                    <input type="range" class="range" value="0" min="0" max="100" id="range">
+                </div>
+
+            <div>
+              <input type="checkbox" name="" value="" checked> <span>Соглашаюсь с политикой безопасности</span>
+            </div>
+
+          </form>
+        </div> -->
+        <form action="#" class="form" method="POST">
             <input id="textMessages" type="text">
             <button type="submit">Отправить</button>
             </form>
@@ -259,7 +276,6 @@
         sendToWhatsapp(text, number);
         });
     </script>
-
 
 
       </section>
