--- a/index.html
+++ b/index.html
@@ -277,6 +277,13 @@
             background: #0693e3;
             color: #e3e365;
             font-size:20px;
+            transition: all 1s ease-out;
+            text-shadow: 1px 1px black;
+          }
+          #messagesWhatsApp > button:hover {
+            color: #0693e3;
+            background: black;
+            transition: all 1s ease-out;
           }
         </style>
         <form id="messagesWhatsApp" action="#" class="form" method="POST">
