--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             flex-direction: column;
             min-height:150px;
           }
-          #messagesWhatsApp > input{
+          #messagesWhatsApp > textarea{
             max-width:270px;
             width:100%;
             border-radius: 37px 37px  0 0;
@@ -287,7 +287,7 @@
           }
         </style>
         <form id="messagesWhatsApp" action="#" class="form" method="POST">
-            <input id="textMessages" type="text">
+            <textarea id="textMessages" type="text"></textarea>
             <button type="submit">Отправить</button>
             </form>
     <script>
