--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             min-height:250px;
             background-color: rgba(0, 0, 0, 0.477);
             border-radius:37px;
-            border:3px solid #0693e3;
+            border:3px solid rgba(0,0,0,0.557);
           }
           #messagesWhatsApp > h3{
             font-size:30px;
