--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
             align-items:center;
             flex-direction: column;
             min-height:250px;
-            background-color: rgba(0, 0, 0, 0.477);
+            background-color: rgba(0, 0, 0, 0.277);
             border-radius:37px;
-            border:3px solid rgba(0,0,0,0.557);
+            /* border:3px solid rgba(0,0,0,0.278); */
           }
           #messagesWhatsApp > h3{
             font-size:30px;
