--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
             <button type="submit">Отправить</button>
         </form>
     <script>
+      let ok=document.querySelector("#textMessages").innerHTML="Здравствуйте нужен ремонт ..."
+      document.querySelector("#textMessages").placeholder="Здравствуйте нужен ремонт ..."
         const form = document.querySelector('.form');
         const number = '+79528885656';
         function sendToWhatsapp(text, phone) {
