--- a/index.html
+++ b/index.html
@@ -296,12 +296,11 @@
         </style>
         <form id="messagesWhatsApp" action="#" class="form" method="POST">
             <h3>Отавить заявку: </h3>
-            <input id="textMessages" >
+            <!-- <input id="textMessages" > -->
             <button type="submit">Отправить</button>
         </form>
     <script>
-      let ok=document.querySelector("#textMessages").innerHTML="Здравствуйте нужен ремонт ..."
-      document.querySelector("#textMessages").placeholder="Здравствуйте нужен ремонт ..."
+  
         const form = document.querySelector('.form');
         const number = '+79528885656';
         function sendToWhatsapp(text, phone) {
