--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
             border-radius: 7px 7px 7px 7px;
             min-height:40px;
             text-align:center;
+            background: transparent;
           }
           #messagesWhatsApp > button{
             max-width:270px;
@@ -296,7 +297,7 @@
         </style>
         <form id="messagesWhatsApp" action="#" class="form" method="POST">
             <h3>Отавить заявку: </h3>
-            <!-- <input id="textMessages" > -->
+            <input id="textMessages" >
             <button type="submit">Отправить</button>
         </form>
     <script>
