--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
             
           }
           #messagesWhatsApp > input{
-            max-width:270px;
-            width:100%;
+            /* max-width:270px; */
+            width:1%;
             border-radius: 7px 7px 7px 7px;
             min-height:40px;
             text-align:center;
