--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <form id="messagesWhatsApp" action="#" class="form" method="POST">
             <h3>Отавить заявку: </h3>
             <!-- <input id="textMessages" > -->
-            <button type="submit">Отправить</button>
+            <button type="submit">Отправить заявку</button>
         </form>
       
     <!-- <script>
