--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
     <link rel="stylesheet" href="site/css/reviewsClients.css">
     <link rel="stylesheet" href="site/css/portfolioWorks.css">
+    <link rel="stylesheet" href="site/css/leaveWhatsApp.css">
+
     <meta name="description" content="Аурум строй. Профессиональный ремонт квартир и домов под ключ в Томске. Ремонт студий · Ремонт в новостройке · Ремонт вторичного жилья · Ремонт домов и коттеджей.">
      <!-- Разметка JSON-LD, созданная Мастером разметки структурированных данных Google. -->
 <script type="application/ld+json">
@@ -255,7 +257,7 @@
         </div> -->
        
         <form id="messagesWhatsApp" action="#" class="form" method="POST">
-            <h3>Отавить заявку: </h3>
+            <!-- <h3>авить заявку: </h3> -->
             <!-- <input id="textMessages" > -->
             <button type="submit">Отправить заявку</button>
         </form>
