--- a/remont-vann-i-sanuzlov-2/index.html
+++ b/remont-vann-i-sanuzlov-2/index.html
@@ -271,9 +271,9 @@
           <!-- <div class="boxMessages" w3-include-html="../site/includeHTML/leaveArequest.html"></div> -->
       
         <form id="messagesWhatsApp" action="#" class="form" method="POST">
-            <h3>Отавить заявку: </h3>
+            <!-- <h3>вить заявку: </h3> -->
             <!-- <input id="textMessages" > -->
-            <button type="submit">Отправить</button>
+            <button type="submit">Отправить заявку</button>
         </form>
       
     <!-- <script>
