--- a/prajs-list/index.html
+++ b/prajs-list/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../site/css/homeSubPages.css">
     <link rel="stylesheet" href="../site/css/humanOrNot.css">
     <link rel="stylesheet" href="../site/css/footer.css">
+    <link rel="stylesheet" href="../site/css/leaveWhatsApp.css">
     <style media="screen">
       body > main > table > tbody > tr > td{
         border:0.5px solid black;
@@ -164,7 +165,7 @@
           <h1>Прайс лист, цены на ремонт домов в Томске</h1>
           <!-- <p>С гарантией на все работы</p> -->
         </div>
-        <div class="calcOrder">
+        <!-- <div class="calcOrder">
           <span id="messages"></span>
 
           <form class="" action="https://remont-tomsk.ru/site/php/form.php" method="post" id="importantForm" name="formOk">
@@ -179,7 +180,12 @@
               <input type="checkbox" name="" value="" checked> <span>Соглашаюсь с политикой безопасности</span>
             </div>
           </form>
-        </div>
+        </div> -->
+        <form id="messagesWhatsApp" action="#" class="form" method="POST">
+            <!-- <h3>авить заявку: </h3> -->
+            <!-- <input id="textMessages" > -->
+            <button type="submit">Отправить заявку</button>
+        </form>
       </section>
 
     </header>
@@ -2980,8 +2986,5 @@
     </main>
       <footer w3-include-html="../site/includeHTML/footer.html"></footer>
   </body>
-  <script defer type="text/javascript" src="../site/js/includeHTML.js"></script>
-  <script defer type="text/javascript" src="../site/js/menuWithDropDownList.js"></script>
-  <script type="text/javascript" src="../site/js/modalWindow.js"></script>
-  <script type="text/javascript" src="../site/js/humanOrNot.js"></script>
-  </html>
+  <script defer type="text/javascript" src="../site/js/mainWebsiteScript.js"></script>
+ </html>
