--- a/studiya-ot-10000-m2/index.html
+++ b/studiya-ot-10000-m2/index.html
@@ -207,14 +207,15 @@
         <button type="button" name="button">Оставить заявку</button>
       </a> -->
       <section w3-include-HTML="../site/includeHTML/typesOfRepairs.html"></section>
-
+<h2>Фотографии наших выполненных работ:</h2>
+      <section w3-include-html="../site/includeHTML/portfolioGallaryRemontDomov.html"></section>
       <h2>Предварительный расчет стоимости ремонта:</h2>
       <section w3-include-html="../site/includeHTML/calc.html"></section>
       <section w3-include-html="../site/includeHTML/additionalServicesOtherPages.html"></section>
       <section w3-include-html="../site/includeHTML/freeMeasurement.html"></section>
       <section w3-include-html="../site/includeHTML/aboutUs.html" id="aboutUs"></section>
-      <h2>Фотографии наших выполненных работ:</h2>
-      <section w3-include-html="../site/includeHTML/portfolioGallaryRemontDomov.html"></section>
+      
+      <!-- that was gallary here  -->
 
       <section w3-include-html="../site/includeHTML/reviews.html"></section>
       <div w3-include-html="../site/includeHTML/priceList.html"></div>
