--- a/uslugi/index.html
+++ b/uslugi/index.html
@@ -26,6 +26,8 @@
 
     <link rel="stylesheet" href="../site/css/photoGallary.css">
     <link rel="stylesheet" href="../site/css/humanOrNot.css">
+    <link rel="stylesheet" href="../site/css/leaveWhatsApp.css">
+    
     <style media="screen">
 
       img{
@@ -244,7 +246,7 @@
           <h1>Строительные услуги в Томске</h1>
           <!-- <p>С гарантией на все работы</p> -->
         </div>
-        <div class="calcOrder">
+        <!-- <div class="calcOrder">
           <span id="messages"></span>
 
           <form class="" action="https://remont-tomsk.ru/site/php/form.php" method="post" id="importantForm" name="formOk">
@@ -259,7 +261,12 @@
               <input type="checkbox" name="" value="" checked> <span>Соглашаюсь с политикой безопасности</span>
             </div>
           </form>
-        </div>
+        </div> -->
+         <form id="messagesWhatsApp" action="#" class="form" method="POST">
+            <!-- <h3>авить заявку: </h3> -->
+            <!-- <input id="textMessages" > -->
+            <button type="submit">Отправить заявку</button>
+        </form>
       </section>
 
     </header>
