--- a/remont-kvartir/index.html
+++ b/remont-kvartir/index.html
@@ -233,17 +233,22 @@
       <!-- <section w3-include-html="../site/includeHTML/haveQuestions.html"></section> -->
       <section w3-include-HTML="../site/includeHTML/typesOfRepairs.html"></section>
 
+      <h2>Фотографии наших выполненных работ:</h2>
+      <section w3-include-html="../site/includeHTML/portfolioGallaryRemontDomov.html"></section>
+      <!-- <a href="https://wa.me/79528808007">
+        <button type="button" name="button">Оставить заявку</button>
+      </a> -->
+
   <h2>Предвари<wbr>тельный расчет. Узнай стоимость ремонта своей квартиры и получи скидку на материалы.</h2>
   <section w3-include-html="../site/includeHTML/calc.html"></section>
       <section w3-include-html="../site/includeHTML/additionalServicesOtherPages.html"></section>
 
+      
 
   <section w3-include-html="../site/includeHTML/freeMeasurement.html"></section>
   <section w3-include-html="../site/includeHTML/aboutUs.html" id="aboutUs"></section>
 
-      <h2>Фотографии наших выполненных работ:</h2>
-      <section w3-include-html="../site/includeHTML/portfolioGallaryRemontDomov.html"></section>
-
+      <!-- that was gallary here -->
       <section w3-include-html="../site/includeHTML/reviews.html"></section>
       <div w3-include-html="../site/includeHTML/priceList.html"></div>
 
