--- a/uslugi/turnkeyRedevelopment/index.html
+++ b/uslugi/turnkeyRedevelopment/index.html
@@ -26,6 +26,7 @@
 
     <link rel="stylesheet" href="../../site/css/photoGallary.css">
     <link rel="stylesheet" href="../../site/css/humanOrNot.css">
+     <link rel="stylesheet" href="../../site/css/leaveWhatsApp.css">
     <style media="screen">
 
       img{
@@ -121,7 +122,7 @@
      "name": "Аурум Строй"
    },
    "datePublished": "2024-05-17:17:35:37 GMT+0700",
-   "dateModified": "2024-05-18:17:35:37 GMT+0700",
+   "dateModified": "2025-05-20:17:35:37 GMT+0700",
    "image": "https://remont-tomsk.ru/site/img/logo.png.webp",
    "articleSection": "Ремонт квартир и домов",
    "articleBody": "Мечтаете обновить свое жилье, сделать его более функциональным и комфортным? Перепланировка квартиры – это отличное решение!  В Томске существует идеальная  компания, готовая реализовать ваш проект «под ключ», избавив вас от хлопот и лишних забот.",
@@ -267,22 +268,11 @@
           <h1>Перепланировка под ключ в Томске</h1>
           <!-- <p>С гарантией на все работы</p> -->
         </div>
-        <div class="calcOrder">
-          <span id="messages"></span>
-
-          <form class="" action="https://remont-tomsk.ru/site/php/form.php" method="post" id="importantForm" name="formOk">
-            <h3>Рассчитать заказ</h3>
-            <input type="text" name="name" value="" placeholder="Имя" id="name">
-            <input type="text" name="tel" value="" placeholder="+7(__)__-__-__" id="tel">
-             <h3>Для отправки данных перетащите ползунок вправо</h3>
-                <div class="range_box">
-                    <input type="range" class="range" value="0" min="0" max="100" id="range">
-                </div>
-            <div>
-              <input type="checkbox" name="" value="" checked> <span>Соглашаюсь с политикой безопасности</span>
-            </div>
-          </form>
-        </div>
+        <form id="messagesWhatsApp" action="#" class="form" method="POST">
+            <!-- <h3>авить заявку: </h3> -->
+            <!-- <input id="textMessages" > -->
+            <button type="submit">Отправить заявку</button>
+        </form>
       </section>
 
     </header>
@@ -317,19 +307,22 @@
       Гарантийные обязательства:  уточните, какие гарантии предоставляет компания на выполненные работы.</p>
       <p>Перепланировка под ключ – это удобное и выгодное решение для тех, кто хочет обновить свое жилье, не тратя время и нервы на самостоятельный ремонт.  Доверьте свой проект профессионалам в Томске, и ваша мечта о комфортном и функциональном доме станет реальностью!</p>
       </article>
-      <!-- <section class="additionalServicesOk" w3-include-html="../../site/includeHTML/additionalServicesOtherPages.html"></section> -->
-      <!-- <section w3-include-HTML="../../site/includeHTML/typesOfRepairs.html"></section> -->
+     <h2>Фотографии наших работ:</h2>
+        <section w3-include-html="../../site/includeHTML/portfolioGallaryTurnkeyRedevelopment.html"></section>
 
         <h2>Предвари<wbr>тельный расчет. Узнай стоимость ремонта своей квартиры и получи скидку на материалы.</h2>
         <section w3-include-html="../../site/includeHTML/calc.html"></section>
+         <span style="margin:1%"></span>
+        <a href="https://wa.me/79528808007">
+          <button type="button" name="button">Оставить заявку</button>
+        </a>
             <!-- <section w3-include-html="../site/includeHTML/additionalServicesOtherPages.html"></section> -->
 
       <span style="margin:3%;"></span>
         <section w3-include-html="../../site/includeHTML/freeMeasurement.html"></section>
         <section w3-include-html="../../site/includeHTML/aboutUs.html" id="aboutUs"></section>
 
-        <h2>Фотографии наших работ:</h2>
-        <section w3-include-html="../../site/includeHTML/portfolioGallaryTurnkeyRedevelopment.html"></section>
+        
 
         <section w3-include-html="../../site/includeHTML/reviews.html"></section>
         <div w3-include-html="../../site/includeHTML/priceList.html"></div>
@@ -342,14 +335,6 @@
 
     <footer w3-include-html="../../site/includeHTML/footer.html"></footer>
     </body>
-    <script defer type="text/javascript" src="../../site/js/includeHTML.js"></script>
-    <script type="text/javascript" src="../../site/js/modalWindow.js"></script>
-
-    <script defer type="text/javascript" src="../../site/js/calculator.js"></script>
-    <!-- I'm don't know, what is't is that! -->
-    <!-- <script type="text/javascript" src="../site/js/getForm.js"></script> -->
-    <script defer type="text/javascript" src="../../site/js/menuWithDropDownList.js"></script>
-    <script type="text/javascript" src="../../site/js/toTheTop.js"></script>
-    <script defer type="text/javascript" src="../../site/js/swiper-bundle.min.js"></script>
-<script type="text/javascript" src="../../site/js/humanOrNot.js"></script>
+    <script defer type="text/javascript" src="../../site/js/mainWebsiteScript.js"></script>
+   
 </html>
